// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passes a single child properly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`passes multiple children properly 1`] = `
<View
  style={{}}
>
  <View
    style={{}}
  />
  <View
    style={{}}
  />
  <View
    style={{}}
  />
</View>
`;
